--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
                   <h3>Follow Us</h3>
                   <!-- <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
                   <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a> -->
-                  <a href="https://www.linkedin.com/company/fixly-innovation-private-limited/" class="social-icon"><i class="fab fa-linkedin"></i></a>
-                  <a href="https://www.instagram.com/fixlyinnov" class="social-icon"><i class="fab fa-instagram"></i></a>
+                  <a target="_blank" href="https://www.linkedin.com/company/fixly-innovation-private-limited/" class="social-icon"><i class="fab fa-linkedin"></i></a>
+                  <a target="_blank" href="https://www.instagram.com/fixlyinnov" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
               </div>
             
