--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h1 class="title" id="About">About Us</h1>
        
        <div class="container-fixly">
-        <h1>what we do !</h1>
+        <h1>What we do !</h1>
         <p class="lite">At FIXLY, we believe in building long-lasting partnerships with our clients. Whether you’re a startup looking for scalable IT solutions or an enterprise needing robust infrastructure support, we are your trusted technology partner, helping you turn digital transformation into a competitive advantage.</p>
 
        </div>
